--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-night-v35/themes.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-night-v35/themes.xml
@@ -1,5 +1,5 @@
-<!--
-  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (C) 2025  Etienne Schmidt (eschmidt@schmidt-ti.eu)
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -15,8 +15,8 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+
     <style name="Theme.OpenSyncedLists" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
@@ -26,10 +26,12 @@
         <item name="colorSecondary">@color/teal_700</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+            <item name="android:navigationBarColor">@android:color/transparent</item>
 
+        <item name="android:windowOptOutEdgeToEdgeEnforcement">true
+        </item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">
+        <item name="android:statusBarColor">
             ?attr/colorPrimaryVariant
         </item>
         <!-- Customize your theme here. -->
