--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-v35/themes.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-v35/themes.xml
@@ -1,5 +1,5 @@
-<!--
-  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (C) 2025  Etienne Schmidt (eschmidt@schmidt-ti.eu)
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -15,26 +15,25 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.OpenSyncedLists" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<resources>
+
+    <style name="Theme.OpenSyncedLists" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_700</item>
+        <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
-
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">
+        <item name="android:statusBarColor">
             ?attr/colorPrimaryVariant
         </item>
+        <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColorPrimary">#ffffffff</item>
-        <item name="android:textColor">#ffffffff</item>
-
+        <item name="android:textColor">#000000</item>
+        <item name="toolbarStyle">@style/MyToolbarStyle</item>
     </style>
 </resources>
