--- a/Android_Client/OpenSyncedLists/app/src/main/res/xml/preferences_root.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/xml/preferences_root.xml
@@ -30,8 +30,8 @@
         <SwitchPreferenceCompat
             android:defaultValue="false"
             android:key="list_overview_instead_cards"
-            android:summary="Display all lists inside a list view instead of a grid of cards"
-            android:title="List overview as list instead of cards" />
+            android:summary="@string/pref_list_overview_instead_cards_summary"
+            android:title="@string/pref_list_overview_instead_cards_title" />
 
 
     </PreferenceCategory>
